moved scrollbar fix to PrintPreview ux
git-svn-id: https://svn.opengeo.org/CAPRA/GeoNode/trunk@950 125c47a5-210e-49ec-a0c6-83efc728e0a1

--- a/src/geonode-client/src/theme/app/geoexplorer.css
+++ b/src/geonode-client/src/theme/app/geoexplorer.css
@@ -1,8 +1,4 @@
-/* fixes scrollbar issue in FF on OSX */
-textarea.x-form-field {
-    padding: 1px 1px 1px 3px;
-}
-/* workaround for combo box lists disappearing in windows in Ext 3.2-beta */
+/* workaround for combo box lists disappearing in Ext.Window in Ext 3.2-beta */
 .x-combo-list {
     z-index: 10000 !important;
 }
